--- a/역기획서/역기획서.md
+++ b/역기획서/역기획서.md
@@ -36,8 +36,10 @@
           - 내 정보 확인 시 따라가기 작동 안함
           <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/%EB%94%B0%EB%9D%BC%EA%B0%80%EA%B8%B0.jpg" width="50%">
 
+
       - 포켓팜 방문
             - 자신의 포켓팜 방문 가능
+            
             <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/%ED%8F%AC%EC%BC%93%ED%8C%9C.jpg" width="50%">
             
     - 친구
@@ -55,7 +57,7 @@
           - 쪽지
             - 친구에게 메세지를 보낼 수 있음
             
-          <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EC%AA%BD%EC%A7%80.jpg" width="50">
+          <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EC%AA%BD%EC%A7%80.jpg" width="50%">
           
           - 따라가기
               - 친구가 있는 맵으로 이동 가능
