--- a/역기획서.md
+++ b/역기획서.md
@@ -214,13 +214,12 @@
     - 콘솔
       - 이동키
         - 상하좌우 이동을 할 수 있음
-        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9D%B4%EB%8F%99%ED%82%A4.jpg?raw=true" width="30%" height="30%">
-                
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9D%B4%EB%8F%99%ED%82%A4.jpg?raw=true" width="30%" height="30%">        
       - 콘솔 넘기기
         - 우로 넘기기
-        - <img src="https://raw.githubusercontent.com/ByungOok/Infinity/master/benchmarking_capture/4.%20in-game%20screen/%EC%9A%B0%EB%A1%9C%20%EB%84%98%EA%B8%B0%EA%B8%B0.jpg" width"30%" height="30%">
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9A%B0%EB%A1%9C%20%EB%84%98%EA%B8%B0%EA%B8%B0.jpg?raw=true" width="30%" height="30%">       
         - 좌로 넘기기
-        - <img src="https://raw.githubusercontent.com/ByungOok/Infinity/master/benchmarking_capture/4.%20in-game%20screen/%EC%A2%8C%EB%A1%9C%20%EB%84%98%EA%B8%B0%EA%B8%B0.jpg" width"50%" height="30%">
+        - <img src="https://raw.githubusercontent.com/ByungOok/Infinity/master/benchmarking_capture/4.%20in-game%20screen/%EC%A2%8C%EB%A1%9C%20%EB%84%98%EA%B8%B0%EA%B8%B0.jpg?raw=true" width="30%" height="30%">       
         -
         
        
