--- a/역기획서.md
+++ b/역기획서.md
@@ -475,7 +475,23 @@
       - 투표
         - 투표하여 낮에 처형할 플레이어를 고를 수 있음
         - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%B2%98%ED%98%95.jpg" width="30%" height="30%"> 
-     
+      - 채팅
+        - 채팅창
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%B1%84%ED%8C%85%EC%B0%BD.jpg" width="30%" height="30%"> 
+      - 감정표현
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%B2%98%ED%98%95.jpg" width="30%" height="30%"> 
+          - 감정표현 이모티콘 > 밤에도 사용 가능
+          - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EA%B0%90%EC%A0%95%ED%91%9C%ED%98%84%EC%B0%BD.jpg" width="30%" height="30%"> 
+      - 캡쳐
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%BA%A1%EC%B3%90.jpg" width="30%" height="30%"> 
+    - 개인 능력
+      - 시간 축소
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%8B%9C%EA%B0%84%20%EC%B6%95%EC%86%8C.jpg" width="30%" height="30%"> 
+      - 시간 연장
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%8B%9C%EA%B0%84%20%EC%97%B0%EC%9E%A5.jpg" width="30%" height="30%"> 
+      - 특수 능력
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9D%B5%EB%AA%85%EC%B1%84%ED%8C%85%EB%B0%A9.jpg" width="30%" height="30%"> 
+        
   - 게임 모드
     - 마피아
     - 포켓 마이크(노래방)
