--- a/역기획서.md
+++ b/역기획서.md
@@ -491,7 +491,49 @@
         - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%8B%9C%EA%B0%84%20%EC%97%B0%EC%9E%A5.jpg" width="30%" height="30%"> 
       - 특수 능력
         - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9D%B5%EB%AA%85%EC%B1%84%ED%8C%85%EB%B0%A9.jpg" width="30%" height="30%"> 
-        
+  - 방장
+    - 방장 권한
+      - 게임 시작하기
+        - <https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EA%B2%8C%EC%9E%84%EC%8B%9C%EC%9E%91%ED%95%98%EA%B8%B0.jpg" width="30%" height="30%"> 
+      - 방 설정
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%B0%A9%EC%84%A4%EC%A0%95.jpg" width="30%" height="30%"> 
+        -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%B0%A9%EC%84%A4%EC%A0%95%EC%B0%BD.png" width="30%" height="30%"> 
+      - 강퇴하기
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EA%B0%95%ED%87%B4%ED%95%98%EA%B8%B0.jpg" width="30%" height="30%"> 
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EA%B0%95%ED%87%B4%ED%95%98%EA%B8%B0%EC%B0%BD.png" width="30%" height="30%"> 
+  - 기타
+    - 옵션
+      - 소리
+      -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%98%B5%EC%85%98%EC%86%8C%EB%A6%AC%E3%85%A3.jpg" width="30%" height="30%"> 
+      - 진동
+      -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%A7%84%EB%8F%99.png" width="30%" height="30%"> 
+      - 코인 상점
+        -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%BD%94%EC%9D%B8%EC%83%81%EC%A0%90%EB%B2%84%ED%8A%BC.png" width="30%" height="30%"> 
+        -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%BD%94%EC%9D%B8%EC%83%81%EC%A0%90.jpg" width="30%" height="30%"> 
+      - 루비 상점
+        -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%98%B5%EC%85%98%EC%B0%BD-%EB%A3%A8%EB%B9%84%EC%83%81%EC%A0%90.jpg" width="30%" height="30%"> 
+        -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%A3%A8%EB%B9%84%EC%83%81%EC%A0%90.jpg" width="30%" height="30%"> 
+      - 방 나가기
+        -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%B0%A9%20%EB%82%98%EA%B0%80%EA%B8%B0.png" width="30%" height="30%"> 
+    - 신고하기
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%8B%A0%EA%B3%A0%ED%95%98%EA%B8%B0.jpg" width="30%" height="30%"> 
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%B0%A9%20%EB%82%98%EA%B0%80%EA%B8%B0.png" width="30%" height="30%"> 
+    - 친구
+      - 친구창 열림
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%B9%9C%EA%B5%AC.jpg" width="30%" height="30%"> 
+  - 정보
+    - 방 정보
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%B0%A9%20%EC%A0%95%EB%B3%B4.jpg" width="30%" height="30%"> 
+    - 게임 정보
+      - 날짜
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%ED%98%84%EC%9E%AC%20%EB%82%A0%EC%A7%9C.png" width="30%" height="30%"> 
+      - 남은 시간
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%82%A8%EC%9C%BC%EC%8B%9C%EA%B0%84.png" width="30%" height="30%"> 
+      - 현재 장소
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%ED%98%84%EC%9E%AC%20%EC%9E%A5%EC%86%8C.png" width="30%" height="30%"> 
+      - 나의 직업
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%82%98%EC%9D%98%20%EC%A7%81%EC%97%85.png" width="30%" height="30%"> 
+    - 현재 상황
   - 게임 모드
     - 마피아
     - 포켓 마이크(노래방)
