--- a/역기획서.md
+++ b/역기획서.md
@@ -494,7 +494,7 @@
   - 방장
     - 방장 권한
       - 게임 시작하기
-        - <https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EA%B2%8C%EC%9E%84%EC%8B%9C%EC%9E%91%ED%95%98%EA%B8%B0.jpg" width="30%" height="30%"> 
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EA%B2%8C%EC%9E%84%EC%8B%9C%EC%9E%91%ED%95%98%EA%B8%B0.jpg" width="30%" height="30%"> 
       - 방 설정
         - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%B0%A9%EC%84%A4%EC%A0%95.jpg" width="30%" height="30%"> 
         -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%B0%A9%EC%84%A4%EC%A0%95%EC%B0%BD.png" width="30%" height="30%"> 
@@ -504,17 +504,17 @@
   - 기타
     - 옵션
       - 소리
-      -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%98%B5%EC%85%98%EC%86%8C%EB%A6%AC%E3%85%A3.jpg" width="30%" height="30%"> 
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%98%B5%EC%85%98%EC%86%8C%EB%A6%AC%E3%85%A3.jpg" width="30%" height="30%"> 
       - 진동
-      -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%A7%84%EB%8F%99.png" width="30%" height="30%"> 
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%A7%84%EB%8F%99.png" width="30%" height="30%"> 
       - 코인 상점
-      -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%BD%94%EC%9D%B8%EC%83%81%EC%A0%90%EB%B2%84%ED%8A%BC.png" width="30%" height="30%"> 
-      -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%BD%94%EC%9D%B8%EC%83%81%EC%A0%90.jpg" width="30%" height="30%"> 
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%BD%94%EC%9D%B8%EC%83%81%EC%A0%90%EB%B2%84%ED%8A%BC.png" width="30%" height="30%"> 
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%BD%94%EC%9D%B8%EC%83%81%EC%A0%90.jpg" width="30%" height="30%"> 
       - 루비 상점
-      -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%98%B5%EC%85%98%EC%B0%BD-%EB%A3%A8%EB%B9%84%EC%83%81%EC%A0%90.jpg" width="30%" height="30%"> 
-      -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%A3%A8%EB%B9%84%EC%83%81%EC%A0%90.jpg" width="30%" height="30%"> 
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%98%B5%EC%85%98%EC%B0%BD-%EB%A3%A8%EB%B9%84%EC%83%81%EC%A0%90.jpg" width="30%" height="30%"> 
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%A3%A8%EB%B9%84%EC%83%81%EC%A0%90.jpg" width="30%" height="30%"> 
       - 방 나가기
-      -<img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%B0%A9%20%EB%82%98%EA%B0%80%EA%B8%B0.png" width="30%" height="30%"> 
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%B0%A9%20%EB%82%98%EA%B0%80%EA%B8%B0.png" width="30%" height="30%"> 
     - 신고하기
       - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%8B%A0%EA%B3%A0%ED%95%98%EA%B8%B0.jpg" width="30%" height="30%"> 
       - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%8B%A0%EA%B3%A0%ED%95%98%EA%B8%B0%EC%B0%BD.png" width="30%" height="30%"> 
