--- a/역기획서.md
+++ b/역기획서.md
@@ -461,12 +461,12 @@
     - 콘솔
       - 이동키
         - 상하좌우 이동 
-        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9D%B4%EB%8F%99%ED%82%A4.jpg?raw=true" width="30%" height="30%">        
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9D%B4%EB%8F%99%ED%82%A4.png" width="30%" height="30%">        
       - 콘솔 넘기기
         - 오른쪽 직업 예측으로 넘기기
-        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9A%B0%EB%A1%9C%20%EB%84%98%EA%B8%B0%EA%B8%B0.jpg?raw=true" width="30%" height="30%">       
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%9A%B0%EB%A1%9C%EC%9D%B4%EB%8F%99.png?raw=true" width="30%" height="30%">       
         - 왼쪽 이동키로 넘기기
-        - <img src="https://raw.githubusercontent.com/ByungOok/Infinity/master/benchmarking_capture/4.%20in-game%20screen/%EC%A2%8C%EB%A1%9C%20%EB%84%98%EA%B8%B0%EA%B8%B0.jpg?raw=true" width="30%" height="30%">       
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%A2%8C%EB%A1%9C%20%EC%9D%B4%EB%8F%99.png" width="30%" height="30%">       
       - 직업 메모
         - 직업 메모 창
         - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%A7%81%EC%97%85%EB%A9%94%EB%AA%A8.jpg?raw=true" width="30%" height="30%">   
@@ -478,6 +478,7 @@
       - 채팅
         - 채팅창
         - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%B1%84%ED%8C%85%EC%B0%BD.jpg" width="30%" height="30%"> 
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/채팅.png" width="30%" height="30%"> 
       - 감정표현
         - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%B2%98%ED%98%95.jpg" width="30%" height="30%"> 
         - 감정표현 이모티콘 > 밤에도 사용 가능
@@ -534,6 +535,13 @@
       - 나의 직업
       - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EB%82%98%EC%9D%98%20%EC%A7%81%EC%97%85.png" width="30%" height="30%"> 
     - 현재 상황
+      - 직업 팝업
+        - 나의 직업과 해야할 일을 알려 준다
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%A7%81%EC%97%85%20%EC%95%8C%EB%A6%BC.png" width="30%" height="30%"> 
+      - 시간 팝업
+        - 현재 시간과 지금 해야할 일을 알려 준다
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/4.%20in-game%20screen/%EC%8B%9C%EA%B0%81%20%EC%95%8C%EB%A6%BC.png" width="30%" height="30%"> 
+      
   - 게임 모드
     - 마피아
     - 포켓 마이크(노래방)
