--- a/역기획서.md
+++ b/역기획서.md
@@ -167,31 +167,7 @@
       - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%97%85%EC%A0%81-%ED%8F%AC%EC%BC%93%ED%8C%9C.jpg?raw=true" width="50%">
       
   - 캐릭터
-    - 로비 화면 하단에 위치
-    - 설정된 캐릭터의 이미지 및 레벨, 닉네임 노출
-    - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0.png" width="50%" height="30%">
-    - 캐릭터의 정보 표시
-    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0.jpg?raw=true" width="50%">
-    
-      - 상세 전적
-        - 쉬움
-        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0-%EC%A0%84%EC%A0%81-%EC%89%AC%EC%9B%80.jpg?raw=true" width="50%">
-        
-        - 모든 직업
-        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0-%EC%A0%84%EC%A0%81-%EB%AA%A8%EB%93%A0%EC%A7%81%EC%97%85.jpg?raw=true" width="50%">
-        
-        - 랭크 게임
-        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0-%EC%A0%84%EC%A0%81-%EB%9E%AD%ED%81%AC.jpg?raw=true" width="50%">
-        
-      - 따라가기 
-        - 자신일 경우 오류
-        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%98%A4%EB%A5%98%EB%A9%94%EC%84%B8%EC%A7%80.jpg?raw=true" width="50%">
-        
-      - 자기소개 입력
-        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%BA%90%EB%A6%AD%ED%84%B0-%EC%9E%90%EA%B8%B0%EC%86%8C%EA%B0%9C.jpg?raw=true" width="50%">
-        
-      - 포켓팜 방문
-        - 포켓팜으로 연결
+    - 캐릭터 창으로 이동
         
   - 상단 바
     - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94.jpg?raw=true" width="50%">
@@ -218,38 +194,7 @@
         - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EB%A3%A8%EB%B9%84%EC%84%A0%EB%AC%BC.jpg?raw=true" width="50%">
         
     - 친구
-      - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EC%B9%9C%EA%B5%AC.jpg?raw=true" width="50%">
-      - 따라가기 허용 버튼 
-        - 다른 유저가 나와 같은 방에 입장할 수 있도록 허용
-        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EB%94%B0%EB%9D%BC%EA%B0%80%EA%B8%B0%ED%97%88%EC%9A%A9.jpg?raw=true" width="50%">
-      - 친구 목록 
-        - 친구를 맺은 유저 아이디, 최근 접속 일자, 쪽지, 따라가기, 친구 삭제
-        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC.jpg?raw=true" width="50%">          
-
-          - 쪽지      
-            - 내용을 입력하여 쪽지 보내기     
-            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EC%AA%BD%EC%A7%80.jpg?raw=true" width="50%">
-
-          - 따라가기 
-            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EB%94%B0%EB%9D%BC%EA%B0%80%EA%B8%B0.jpg?raw=true" width="50%">
-            - 친구 유저가 접속 시 같은 방으로 입장
-            - 친구 유저가 비접속 시 
-              - 푸시를 보냄
-              - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC%EB%94%B0%EB%9D%BC%EA%B0%80%EA%B8%B0-%EB%B9%84%EC%A0%91%EC%86%8D%ED%91%B8%EC%8B%9C.jpg?raw=true" width="50%">
-              - 푸시를 받은 친구 유저는 알림을 받음
-              - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC%EB%94%B0%EB%9D%BC%EA%B0%80%EA%B8%B0-%EB%B9%84%EC%A0%91%EC%86%8D%ED%91%B8%EC%8B%9C%EC%95%8C%EB%A6%BC.jpg?raw=true" width="50%">
-
-          - 삭제
-            - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EC%82%AD%EC%A0%9C%ED%99%95%EC%9D%B8.jpg?raw=true" width="50%">
-      - 신청 목록
-        - 친구를 신청한 유저 목록
-        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EC%8B%A0%EC%B2%AD%EB%AA%A9%EB%A1%9D.jpg?raw=true" width="50%">
-      - 친구 추가 
-        - 닉네임으로 다른 유저 검색, 최근 같이한 플레이어 목록
-        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EC%B9%9C%EA%B5%AC%EC%B6%94%EA%B0%80.jpg?raw=true" width="50%">
-      - 우편함 
-        - 다른 유저가 보낸 쪽지의 내용과 시간 확인 가능
-        - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%B9%9C%EA%B5%AC-%EC%9A%B0%ED%8E%B8%ED%95%A8.jpg?raw=true" width="50%">
+      - 친구 창으로 이동
 
     - 설정
       - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_2/benchmarking_capture/3.%20lobby%20screen/%EC%83%81%EB%8B%A8%EB%B0%94-%EC%84%A4%EC%A0%95.jpg?raw=true" width="50%">
