--- a/역기획서.md
+++ b/역기획서.md
@@ -53,8 +53,16 @@
     - 랭킹
     - 친구
   - 게임
-    - 마피아
-    - 술래 잡기
+    - 마피아와 술래잡기
+      - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/%EB%A1%9C%EB%B9%84_%EB%A7%88%ED%94%BC%EC%95%84%26%EC%88%A0%EB%9E%98%EC%9E%A1%EA%B8%B0.png" width="50%">
+      - 각 UI 버튼을 누름에 따라 해당 방에 입장 가능
+      - 마피아 버튼을 누르는 경우
+        - 쉬움, 어려움 모드를 선택할 수 있음
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/%EB%A7%88%ED%94%BC%EC%95%84%20%EA%B2%8C%EC%9E%84%20%EA%B3%A0%EB%A5%B4%EA%B8%B0.png" width="50%">
+      - 술래 잡기 버튼을 누르는 경우
+        - 술래 잡기 방으로 이동
+        - 맵은 마피아 방과 동일하나 게임 종류만 상단에 다르게 표기됨
+        - <img src="https://github.com/ByungOok/Infinity/blob/master/benchmarking_capture/3.%20lobby%20screen/%EA%B2%8C%EC%9E%84_%EC%88%A0%EB%9E%98%EC%9E%A1%EA%B8%B0.png" width="50%">
   - 커뮤니티
     - 카페
       - 포켓마피아 커뮤니티 facebook 화면으로 접속
