--- a/2015920069_주의사항.md
+++ b/2015920069_주의사항.md
@@ -76,6 +76,10 @@
             - 다음 상태로 전환하는 도형입니다.
           - 마름모
             - 조건 분기입니다. 왼쪽은 yes, 오른쪽은 no라고 생각하시면 됩니다.
+     - 저장 방법
+        1. draw.io의 화면에서 File 탭을 클릭합니다.
+        2. Save, 또는 Save as... 를 클릭해 저장합니다.
+        3. 또는 빨간색 바탕의 "Unsave....."라는 문장을 클릭하면 자동으로 다운로드폴더에 저장됩니다.
      - 작성 계획
         1. 각 팀원은 미리 만들어둔 Flow chart 폴더의 자기 학번 폴더 안에 이미지를 업로드합니다.
         2. 모두 업로드했다면 master branch에서 하나의 마크다운 문서로 결합합니다.
@@ -84,3 +88,5 @@
         2. 어떠한 기능의 작용에 대한 순서를 그린다고 생각하셔야 됩니다.
         3. 그러므로 수 많은 순서도가 생성되는 것은 당연한 것입니다.
         4. 작업 중 다른 순서도로 연결될만한 키워드가 있다면 적극 공유하여 작업을 원활히 합시다.
+        5. 순서도 작성 중 불의의 사고로 창이 꺼질 수 있습니다. 저장을 통해 백업합시다.
+        
