--- a/순서도.md
+++ b/순서도.md
@@ -1,1 +1,24 @@
+# 창의공학설계 8조(Infinity) 벤치마킹 어플 '포켓마피아' 순서도
 
+## 류병욱(조장), 김민혜, 김정현, 이정민, 전소정
+0. 게임 로딩 화면
+---
+1. 팝업 화면
+---
+2. 공통
+  - 확성기
+---
+3. 로비 화면
+  - 내정보
+  - 친구
+  - 랭킹
+  - 클랜
+  - 카페
+  - 광장 
+  - 포켓팜
+  - 상점
+  - 설정
+  - 도움말 및 튜토리얼
+  - 랜덤박스, 빙고판
+---
+4. 인 게임 화면
