--- a/순서도.md
+++ b/순서도.md
@@ -9,16 +9,39 @@
   - 확성기
 ---
 3. 로비 화면
-  - 내정보
-  - 친구
-  - 랭킹
-  - 클랜
-  - 카페
-  - 광장 
-  - 포켓팜
-  - 상점
-  - 설정
-  - 도움말 및 튜토리얼
-  - 랜덤박스, 빙고판
----
+  - 상단
+    - 코인, 루비 상점
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EC%BD%94%EC%9D%B8,%EB%A3%A8%EB%B9%84%EC%83%81%EC%A0%90.JPG?raw=true" width="60%">
+    - 친구
+    - <img src="" width="60%">
+    - 설정
+    - <img src="" width="60%">
+  - 하단
+    - 내정보
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EB%82%B4%EC%A0%95%EB%B3%B4/%EC%83%81%EC%84%B8%EC%A0%84%EC%A0%81.jpg?raw=true" width="50%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EB%82%B4%EC%A0%95%EB%B3%B4/%ED%8F%AC%EC%BC%93%ED%8C%9C%EB%B0%A9%EB%AC%B8.JPG?raw=true" width="20%"><img src="" width="60%">
+    - 친구
+    - <img src="" width="60%">
+    - 랭킹
+    - <img src="" width="60%">
+    - 상점
+    - <img src="" width="60%">
+    - 업적
+    - <img src="" width="60%">
+    - 클랜
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%B0%BE%EC%95%84%EB%B3%B4%EA%B8%B0.JPG?raw=true" width="20%"> <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%83%9D%EC%84%B1.JPG?raw=true" width="20%"> <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EB%9E%AD%ED%82%B9.JPG?raw=true" width="20%"> <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%B4%88%EB%8C%80.JPG?raw=true" width="20%"> <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%ED%83%88%ED%87%B4.JPG?raw=true" width="20%">
+    - 카페
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EC%B9%B4%ED%8E%98.JPG?raw=true" width="20%">
+  - 기타  
+    - 도움말
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EB%8F%84%EC%9B%80%EB%A7%90&%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC/%EB%8F%84%EC%9B%80%EB%A7%90.JPG?raw=true" width="40%">
+    - 튜토리얼
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EB%8F%84%EC%9B%80%EB%A7%90&%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC/%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC.JPG?raw=true" width="20%">
+    - 랜덤박스
+    - <img src="" width="60%">
+    - 빙고판
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EB%B9%99%EA%B3%A0%ED%8C%90.JPG?raw=true" width="80%">
+    - 포켓팜
+    - <img src="" width="60%">
+    ---
 4. 인 게임 화면
