--- a/순서도.md
+++ b/순서도.md
@@ -29,11 +29,9 @@
     - 업적
     - <img src="" width="60%">
     - 클랜
-    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%B0%BE%EC%95%84%EB%B3%B4%EA%B8%B0.JPG?raw=true" width="20%"> 
-    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%83%9D%EC%84%B1.JPG?raw=true" width="20%"> 
-    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EB%9E%AD%ED%82%B9.JPG?raw=true" width="20%"> 
-    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%B4%88%EB%8C%80.JPG?raw=true" width="20%"> 
-    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%ED%83%88%ED%87%B4.JPG?raw=true" width="20%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%B0%BE%EC%95%84%EB%B3%B4%EA%B8%B0.JPG?raw=true" width="20%"> <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EB%9E%AD%ED%82%B9.JPG?raw=true" width="20%"> <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%ED%83%88%ED%87%B4.JPG?raw=true" width="20%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%83%9D%EC%84%B1.JPG?raw=true" width="20%"> <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%B4%88%EB%8C%80.JPG?raw=true" width="20%"> 
+    
     - 카페
     - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EC%B9%B4%ED%8E%98.JPG?raw=true" width="20%">
   - 기타  
