--- a/순서도.md
+++ b/순서도.md
@@ -24,6 +24,9 @@
     - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EB%82%B4%EC%A0%95%EB%B3%B4/%ED%8F%AC%EC%BC%93%ED%8C%9C%EB%B0%A9%EB%AC%B8.JPG?raw=true" width="20%">
     - 친구
     - <img src="" width="60%">
+    - <img src="" width="60%">
+    - <img src="" width="60%">
+    
     - 랭킹
     - <img src="" width="60%">
     - 상점
@@ -42,11 +45,15 @@
     - 튜토리얼
     - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EB%8F%84%EC%9B%80%EB%A7%90&%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC/%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC.JPG?raw=true" width="20%">
     - 랜덤박스
-    - <img src="" width="60%">
+    - <img src=https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Random%20box/%EB%9E%9C%EB%8D%A4%EB%B0%95%EC%8A%A4.png"" width="20%">
     - 빙고판
     - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EB%B9%99%EA%B3%A0%ED%8C%90.JPG?raw=true" width="90%">
     - 포켓팜
-    - <img src="" width="60%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Pocket%20Farm/%ED%8F%AC%EC%BC%93%20%ED%8C%9C%20-%20%EB%8B%A4%EB%A5%B8%20%ED%8C%9C.png" width="20%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Pocket%20Farm/%ED%8F%AC%EC%BC%93%ED%8C%9C%20-%20%EA%B0%95%ED%87%B4%ED%95%98%EA%B8%B0.png" width="20%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Pocket%20Farm/%ED%8F%AC%EC%BC%93%ED%8C%9C%20-%20%EA%BE%B8%EB%AF%B8%EA%B8%B0.png" width="20%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Pocket%20Farm/%ED%8F%AC%EC%BC%93%ED%8C%9C%20-%20%EB%B0%A9%20%EC%84%A4%EC%A0%95.png" width="20%">
+    -  <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Pocket%20Farm/%ED%8F%AC%EC%BC%93%ED%8C%9C%20-%20%EB%B0%A9%EB%AA%85%EB%A1%9D.png" width="20%">
     ---
 4. 인 게임 화면
    - 공통
