--- a/순서도.md
+++ b/순서도.md
@@ -17,27 +17,27 @@
     - 친구
     - <img src="" width="60%">
     - 설정
-    - <img src="" width="60%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Setting/%EC%84%A4%EC%A0%95%20-%20%EC%86%8C%EB%A6%AC.png" width="40%">
   - 하단
     - 내정보
     - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EB%82%B4%EC%A0%95%EB%B3%B4/%EC%83%81%EC%84%B8%EC%A0%84%EC%A0%81.jpg?raw=true" width="70%">
     - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%EB%82%B4%EC%A0%95%EB%B3%B4/%ED%8F%AC%EC%BC%93%ED%8C%9C%EB%B0%A9%EB%AC%B8.JPG?raw=true" width="20%">
     - 친구
-    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Friend/%EC%B9%9C%EA%B5%AC%20-%20%EC%8B%A0%EC%B2%AD%EB%AA%A9%EB%A1%9D.png" width="60%">
-    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Friend/%EC%B9%9C%EA%B5%AC%20-%20%EC%9A%B0%ED%8E%B8%ED%95%A8.png" width="60%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Friend/%EC%B9%9C%EA%B5%AC%20-%20%EC%8B%A0%EC%B2%AD%EB%AA%A9%EB%A1%9D.png" width="50%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Friend/%EC%B9%9C%EA%B5%AC%20-%20%EC%9A%B0%ED%8E%B8%ED%95%A8.png" width="30%">
     - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Friend/%EC%B9%9C%EA%B5%AC%20-%20%EC%B9%9C%EA%B5%AC%EB%AA%A9%EB%A1%9D.png" width="60%">
-    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Friend/%EC%B9%9C%EA%B5%AC%20-%20%EC%B9%9C%EA%B5%AC%EC%B6%94%EA%B0%80.png" width="60%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Friend/%EC%B9%9C%EA%B5%AC%20-%20%EC%B9%9C%EA%B5%AC%EC%B6%94%EA%B0%80.png" width="50%">
     
     - 랭킹
-    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Ranking/%EB%9E%AD%ED%82%B9-%EA%B2%BD%ED%97%98%EC%B9%98.png" width="60%">
-    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Ranking/%EB%9E%AD%ED%82%B9-%EB%9E%AD%ED%81%AC.png" width="60%">
-    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Ranking/%EB%9E%AD%ED%82%B9-%ED%81%B4%EB%9E%9C.png" width="60%">
-    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Ranking/%EB%9E%AD%ED%82%B9-%ED%8C%9C%20%EB%9E%AD%ED%82%B9.png" width="60%">
-    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Ranking/%EB%9E%AD%ED%82%B9-%ED%8F%89%ED%8C%90.png" width="60%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Ranking/%EB%9E%AD%ED%82%B9-%EA%B2%BD%ED%97%98%EC%B9%98.png" width="40%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Ranking/%EB%9E%AD%ED%82%B9-%EB%9E%AD%ED%81%AC.png" width="40%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Ranking/%EB%9E%AD%ED%82%B9-%ED%81%B4%EB%9E%9C.png" width="40%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Ranking/%EB%9E%AD%ED%82%B9-%ED%8C%9C%20%EB%9E%AD%ED%82%B9.png" width="40%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Ranking/%EB%9E%AD%ED%82%B9-%ED%8F%89%ED%8C%90.png" width="40%">
     - 상점
-    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Market/%EC%83%81%EC%A0%90.png" width="30%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Market/%EC%83%81%EC%A0%90.png" width="60%">
     - 업적
-    - <img src="" width="60%">
+    - <img src="https://github.com/ByungOok/Infinity/blob/2018920019_flow/flowchart/2018920019/Achieve/%EC%97%85%EC%A0%81.png" width="50%">
     - 클랜
     - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%B0%BE%EC%95%84%EB%B3%B4%EA%B8%B0.JPG?raw=true" width="20%"> <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EB%9E%AD%ED%82%B9.JPG?raw=true" width="20%"> <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%ED%83%88%ED%87%B4.JPG?raw=true" width="20%">
     - <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%83%9D%EC%84%B1.JPG?raw=true" width="20%"> <img src="https://github.com/ByungOok/Infinity/blob/2015580029_hw_3/flowchart/2015580029/%ED%81%B4%EB%9E%9C/%ED%81%B4%EB%9E%9C%EC%B4%88%EB%8C%80.JPG?raw=true" width="20%"> 
